--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="row"><b>Эксперимент №4</b><br>Проверка условий выживания<br>КОНФИДЕНЦИАЛЬНАЯ ИНФОРМАЦИЯ<br>
         <b>!ОШИБКА!</b>В системе!<br> данные стёрты......невозможно загрузить информацию<br>Данные наблюдений занесены в БД 
     найденно нечто неопознаное , в кладовой ...............,,,,,,,,,,,,,,,,,,dvgfhdjdjidhvgfhgvhvjcdgvjfhgdvgdgv
-    dvfhjdjdedhdhvghsvhcsjhsjioi00000000000000000000000000000000000000000000000000000000000000000000000000000000000000000</div>
+    dvfhjdjdedhdhvghsvhcsjhsjioi000000000000000000000000000000000000000000<br>00000000000000000000000000000000000000000000000</div>
     </span>
     <script src="js/index.js"></script>
 </body>
